@@ -17,7 +17,6 @@ my $valid_versions = { map { $_ => 1 } qw( 0.1 ) };
 
 use Moose qw( has around extends );
 use Moose::Util::TypeConstraints qw( enum );
-use Dist::Zilla::Util::ConfigDumper qw( config_dumper );
 use Dist::Zilla::Plugin::GenerateFile::FromShareDir 0.006;
 
 extends 'Dist::Zilla::Plugin::GenerateFile::FromShareDir';
@@ -62,7 +61,18 @@ has '+phase' => (
   default => sub { 'build' },
 );
 
-around dump_config => config_dumper( __PACKAGE__, qw( document_version ), );
+around dump_config => sub {
+  my ( $orig, $self, @args ) = @_;
+  my $config = $self->$orig(@args);
+  my $localconf = $config->{ +__PACKAGE__ } = {};
+
+  $localconf->{document_version} = $self->document_version;
+
+  $localconf->{ q[$] . __PACKAGE__ . '::VERSION' } = $VERSION
+    unless __PACKAGE__ eq ref $self;
+
+  return $config;
+};
 
 __PACKAGE__->meta->make_immutable;
 no Moose;
