@@ -13,6 +13,9 @@ This file contains ALL changes in dependencies in both REQUIRED / OPTIONAL depen
  [Changed / test requires]
  - Test::More 0.89 → 0
 
+ [Removed / runtime requires]
+ - Dist::Zilla::Util::ConfigDumper
+
 0.001005 2015-11-14T04:44:40Z
  [Added / develop requires]
  - Dist::Zilla::Plugin::GenerateFile::FromShareDir 0.006
